Fix for mobile menu being behind editor

--- a/client/scss/ept/views/layout/_header.scss
+++ b/client/scss/ept/views/layout/_header.scss
@@ -62,7 +62,7 @@ header {
         bottom: 0;
         left: 0;
         right: 0;
-        z-index: 998;
+        z-index: 1004;
       }
       .burger-notification {
         width: 10px;
@@ -86,7 +86,7 @@ header {
         right: 0;
         left: 100%;
         width: 40vw;
-        z-index: 999;
+        z-index: 1005;
         text-align: left;
         padding: 1.5rem;
         font-size: 1.5rem;
